--- a/md/kecheng/数据结构与算法之美.md
+++ b/md/kecheng/数据结构与算法之美.md
@@ -87,6 +87,10 @@ void print(int n){
 
 a[i]_address = base_address + i * data_type_size;
 
+
+
+
+
 ## 链表
 
 链表通过指针将一组零散的内存块串联在一起。
@@ -342,13 +346,19 @@ merge_sort_c(A, p, r) {
 
 ## 桶排序（Bucket sort）
 
+### 场景：桶排序对要排序数据的要求是非常苛刻的,桶排序比较适合用在外部排序中; 
+
 **线性排序**: 桶排序、计数排序、基数排序
 
 O(n*log(n/m))  = o(n)
 
-桶排序对要排序数据的要求是非常苛刻的,桶排序比较适合用在外部排序中;
+### 
 
-计数排序实是桶排序的一种特殊情况;
+#### 计数排序：
+
+实是桶排序的一种特殊情况; 计数排序只能给非负整数排序(在不改变相对大小的情况下，转化为非负整数)；
+
+#####   例如：比分排名
 
 ```text
 计数排序只能用在数据范围不大的场景中，如果数据范围 k 比要排序的数据 n 大很多，就不适合用计数排序了。而且，计数排序只能给非负整数排序，如果要排序的数据是其他类型的，要将其在不改变相对大小的情况下，转化为非负整数。
@@ -438,10 +448,19 @@ public void countingSort(int[] a, int n) {
 }
 ```
 
-基数排序(Radix sort)：
+#### 基数排序(Radix sort)：
 
-基数排序对要排序的数据是有要求的，需要可以分割出独立的“位”来比较，而且位之间有递进的关系，如果 a 数据的高位比 b
-数据大，那剩下的低位就不用比较了。除此之外，每一位的数据范围不能太大，要可以用线性排序算法来排序，否则，基数排序的时间复杂度就无法做到 O(n) 了。
+##### 场景：固定位的数据，例如手机号排序。长度一致，遍历每个排序。
+
+基数排序对要排序的数据是有要求的，需要可以分割出独立的“位”来比较，而且位之间有递进的关系，如果 a 数据的高位比 b数据大，那剩下的低位就不用比较了。除此之外，每一位的数据范围不能太大，要可以用线性排序算法来排序，否则，基数排序的时间复杂度就无法做到 O(n) 了。
+
+
+
+
+
+## 排序算法区别
+
+
 
 ![image-20230825170702206](../../assets/image-20230825170702206.png)
 
